--- a/index.html
+++ b/index.html
@@ -59,6 +59,50 @@
       </div>
     </section>
 
+    <section id="page2">
+      <div class="page2-content-top">
+        <h2>Features</h2>
+        <p>
+          Most calendars are designed for teams. Slate is designed for
+          freelancers
+        </p>
+      </div>
+
+      <div class="page2-content-mid">
+        <div class="page2-card">
+          <span><img src="/assets/images/mdi_drawing.png" alt="" /></span>
+          <h3>OpenType features Variable fonts</h3>
+          <p>
+            Slate helps you see how many more days you need to work to reach
+            your financial goal.
+          </p>
+        </div>
+        <div class="page2-card">
+          <span><img src="/assets/images/mdi_draw.png" alt="" /></span>
+          <h3>Design with real data</h3>
+          <p>
+            Slate helps you see how many more days you need to work to reach
+            your financial goal.
+          </p>
+        </div>
+        <div class="page2-card">
+          <span><img src="/assets/images/mdi_brush.png" alt="" /></span>
+          <h3>Fastest way to take action</h3>
+          <p>
+            Slate helps you see how many more days you need to work to reach
+            your financial goal.
+          </p>
+        </div>
+      </div>
+
+      <div class="page2-content-bottom">
+        <img src="/assets/images/img2.jpg" alt="" />
+        <button class="play-btn" aria-label="Play video">
+          <img src="/assets/images/play button.png" alt="" />
+        </button>
+      </div>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
