--- a/index.html
+++ b/index.html
@@ -103,6 +103,24 @@
       </div>
     </section>
 
+    <section id="page3">
+      <div class="page3-content">
+        <div class="page3-content-left">
+          <div class="p3-c-l-l">
+            <h3>Fastest way to organize</h3>
+            <p>
+              Most calendars are designed for teams. Slate is designed for
+              freelancers
+            </p>
+          </div>
+          <button class="button">Try For Free</button>
+        </div>
+        <div>
+          <img src="/assets/images/@ Macbook Pro.png" alt="" />
+        </div>
+      </div>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
