--- a/index.html
+++ b/index.html
@@ -121,6 +121,28 @@
       </div>
     </section>
 
+    <section id="page4">
+      <div class="page4-content">
+        <div>
+          <img src="/assets/images/undraw_newsletter_vovu.png" alt="" />
+        </div>
+        <div class="page4-content-right">
+          <div class="p4-c-r-top">
+            <h5>At your fingertips</h5>
+            <h3>Lightning fast prototyping</h3>
+          </div>
+          <div class="p4-c-r-mid">
+            <h6>Subscribe to our Newsletter</h6>
+            <p>Available exclusivery on Figmaland</p>
+            <div class="p4-c-r-bottom">
+              <input type="email" placeholder="Your Email" />
+              <button class="button">Subscribe</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
