--- a/index.html
+++ b/index.html
@@ -143,6 +143,60 @@
       </div>
     </section>
 
+    <section id="page5">
+      <div class="page2-content-top">
+        <h2>Partners</h2>
+        <p>
+          Most calendars are designed for teams. Slate is designed for
+          freelancers
+        </p>
+      </div>
+
+      <div class="page5-content-mid-container">
+        <div class="page5-card-up">
+          <img src="/assets/images/@ partner-style-2.png" alt="" />
+          <img src="/assets/images/@ partner-style-2 (1).png" alt="" />
+          <img src="/assets/images/@ partner-style-2 (2).png" alt="" />
+          <img src="/assets/images/@ partner-style-2 (3).png" alt="" />
+        </div>
+        <div class="page5-card-down">
+          <img src="/assets/images/@ partner-style-2 (4).png" alt="" />
+          <img src="/assets/images/@ partner-style-2.png" alt="" />
+          <img src="/assets/images/@ partner-style-2 (3).png" alt="" />
+          <img src="/assets/images/@ partner-style-2 (1).png" alt="" />
+        </div>
+      </div>
+
+      <div class="page5-content-bottom">
+        <button class="button">Try For Free</button>
+      </div>
+    </section>
+
+    <section id="page6">
+      <div class="page2-content-top">
+        <h2>Testimonials</h2>
+      </div>
+
+      <div class="page6-content-mid">
+        <img src="/assets/images/Brands.png" alt="" />
+        <p>
+          Most calendars are designed for teams. Slate is designed for
+          freelancers who want a simple way to plan their schedule.
+        </p>
+        <div class="page6-content-mid-details">
+          <img src="/assets/images/avatar.png" alt="" />
+          <div>
+            <h4>Joe Doe</h4>
+            <p>UI Designer</p>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <button class="scroll">oooooooooooooo</button>
+      </div>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
